# TravianBot

./: .gitignore  README.md  Readme.rst  requirements.txt  setup.cfg  setup.py  test.py
travian/: __init__.py  config.txt  travianBot.py
