[metadata]
name = TravianBot
author = Sarrablo
summary = TravianBot
description-file = Readme.rst
classifier =
    Environment :: Console
    Operating System :: OS Independent

[files]
packages =
    travian

[entry_points]
console_scripts =
    travian = travian:main

pbr.config.drivers =
    plain = pbr.cfg.driver:Plain
